@@ -135,7 +135,37 @@ Example of advanced usage
 
     :$ nodeset [-s SOURCE] -a -f:
 
+NODE WILDCARDS
+==============
 
+Any wildcard mask found is matched against all nodes from the group source (see ``groups.conf``\(5) and the ``-a/--all`` option above).
+``*`` means match zero or more characters of any type; ``?`` means match exactly one character of any type.
+This can be especially useful for server farms, or when cluster node names differ.
+
+Say that your group configuration is set to return the following “all nodes”:
+  :$ nodeset -f -a:
+  
+  | bckserv[1-2],dbserv[1-4],wwwserv[1-9]
+
+Then, you can use wildcards to select particular nodes, as shown below:
+  :$ nodeset -f 'www\*':
+  
+  | wwwserv[1-9]
+
+  :$ nodeset -f 'www\*[1-4]':
+  
+  | wwwserv[1-4]
+
+  :$ nodeset -f '\*serv1':
+  
+  | bckserv1,dbserv1,wwwserv1
+
+Wildcard masks are resolved prior to extended patterns, but each mask is evaluated as a whole node set operand.
+In the example below, we select all nodes matching ``*serv*`` before removing all nodes matching ``www*``:
+
+  :$ nodeset  -f '\*serv\*\!www\*':
+  
+  | bckserv[1-2],dbserv[1-4]
 
 EXIT STATUS
 ===========
